--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "@walletconnect/client": "^1.7.0",
+		"@walletconnect/qrcode-modal": "^1.7.0",
+		"@walletconnect/web3-provider": "^1.7.0",
+    "assert": "^2.0.0",
     "axios": "^0.26.1",
     "babel-jest": "^27.4.2",
     "babel-loader": "^8.2.3",
@@ -63,6 +67,9 @@
     "semver": "^7.3.5",
     "source-map-loader": "^3.0.0",
     "style-loader": "^3.3.1",
+    "stream": "^0.0.2",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "tailwindcss": "^3.0.2",
     "terser-webpack-plugin": "^5.2.5",
     "web-vitals": "^2.1.4",
